--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "normalize-scss": "^7.0.0",
     "react": "^15.5.4",
     "react-dom": "^15.5.4"
   },
@@ -38,6 +39,7 @@
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
     "eslint-plugin-react": "^6.2.2",
+    "fontgen-loader": "^0.2.1",
     "html-webpack-plugin": "^2.24.1",
     "node-sass": "^3.10.1",
     "open-browser-webpack-plugin": "0.0.2",
