--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "git@github.com:jkvim/react-demo-bolierplate.git"
   },
   "scripts": {
-    "start": "webpack-dev-server --hot --port 8080 --config webpack.config.js"
+    "start": "webpack-dev-server --hot --port 8080 --config webpack.config.js",
+    "server":"node ./server.js"
   },
   "keywords": [
     "react",
