--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "git@github.com:jkvim/react-demo-bolierplate.git"
   },
   "scripts": {
-    "start": "webpack-dev-server --hot --port 8080 --config webpack.config.js"
+    "start": "webpack-dev-server --hot --port 8080 --config webpack.config.js --host 0.0.0.0"
   },
   "keywords": [
     "react",
@@ -26,6 +26,7 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "autoprefixer": "^7.1.1",
     "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
     "babel-loader": "^6.2.5",
@@ -41,6 +42,7 @@
     "html-webpack-plugin": "^2.24.1",
     "node-sass": "^3.10.1",
     "open-browser-webpack-plugin": "0.0.2",
+    "postcss-loader": "^2.0.5",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^3.0.0-beta.4",
     "sass-loader": "^4.1.1",
