--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "webpack-dev-server --hot --port 8080 --config webpack.config.js",
-    "server":"node ./server.js"
+    "server": "node ./server.js"
   },
   "keywords": [
     "react",
@@ -49,6 +49,7 @@
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-dev-server": "^2.4.5",
-    "webpack-hot-middleware": "^2.18.0"
+    "webpack-hot-middleware": "^2.18.0",
+    "ws": "^3.0.0"
   }
 }
